fixed login on safari and quick fix for forms required fields

--- a/apps/fmfn/static/css/main.css
+++ b/apps/fmfn/static/css/main.css
@@ -12133,7 +12133,7 @@ html, body {
   min-height: 100%;
 }
 
-/* line 96, ../sass/helpers/_base.scss */
+/* line 95, ../sass/helpers/_base.scss */
 .tag {
   display: inline-block;
   background-color: #0078a0;
@@ -12154,20 +12154,20 @@ html, body {
   margin: 3px 3px 3px 3px;
 }
 
-/* line 116, ../sass/helpers/_base.scss */
+/* line 115, ../sass/helpers/_base.scss */
 .description {
   color: #5e5e5e;
   font-weight: 300;
 }
 
-/* line 122, ../sass/helpers/_base.scss */
+/* line 121, ../sass/helpers/_base.scss */
 .emphasis {
   font-weight: 700;
   padding-top: 15px;
   padding-bottom: 5px;
 }
 
-/* line 128, ../sass/helpers/_base.scss */
+/* line 127, ../sass/helpers/_base.scss */
 .sub-heading {
   font-size: 20px;
   font-weight: 300;
@@ -12177,47 +12177,47 @@ html, body {
   padding-top: 30px;
 }
 
-/* line 137, ../sass/helpers/_base.scss */
+/* line 136, ../sass/helpers/_base.scss */
 .display-in-line {
   display: inline-block;
 }
 
-/* line 141, ../sass/helpers/_base.scss */
+/* line 140, ../sass/helpers/_base.scss */
 .sub-heading-helper {
   width: 50%;
 }
 
-/* line 147, ../sass/helpers/_base.scss */
+/* line 146, ../sass/helpers/_base.scss */
 .form {
   width: 100%;
 }
-/* line 149, ../sass/helpers/_base.scss */
+/* line 148, ../sass/helpers/_base.scss */
 .form .three-elements {
   width: 33%;
   display: inline-block;
   padding-right: 5px;
 }
-/* line 154, ../sass/helpers/_base.scss */
+/* line 153, ../sass/helpers/_base.scss */
 .form .element-in-block {
   width: 33%;
   display: block;
   margin-bottom: 10px;
 }
-/* line 160, ../sass/helpers/_base.scss */
+/* line 159, ../sass/helpers/_base.scss */
 .form .two-elements {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
   width: 41.66667%;
   float: left;
 }
-/* line 164, ../sass/helpers/_base.scss */
+/* line 163, ../sass/helpers/_base.scss */
 .form .two-elements-exact {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
   width: 50%;
   float: left;
 }
-/* line 168, ../sass/helpers/_base.scss */
+/* line 167, ../sass/helpers/_base.scss */
 .form .middle-element {
   padding-left: 0.9375rem;
   padding-right: 0.9375rem;
@@ -12225,32 +12225,32 @@ html, body {
   float: left;
   text-align: center;
 }
-/* line 173, ../sass/helpers/_base.scss */
+/* line 172, ../sass/helpers/_base.scss */
 .form button {
   margin-top: 20px;
   width: 100%;
   color: white;
 }
-/* line 179, ../sass/helpers/_base.scss */
+/* line 178, ../sass/helpers/_base.scss */
 .form .two-buttons {
   width: 100%;
   display: block;
   text-align: center;
   margin-top: 20px;
 }
-/* line 184, ../sass/helpers/_base.scss */
+/* line 183, ../sass/helpers/_base.scss */
 .form .two-buttons button {
   display: inline-block;
   width: 47%;
   margin-right: 2%;
   color: white;
 }
-/* line 189, ../sass/helpers/_base.scss */
+/* line 188, ../sass/helpers/_base.scss */
 .form .two-buttons button.delete {
   background-color: #b30000;
 }
 
-/* line 196, ../sass/helpers/_base.scss */
+/* line 195, ../sass/helpers/_base.scss */
 .error {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
@@ -12262,12 +12262,12 @@ html, body {
   border-top-left-radius: 3px;
 }
 
-/* line 203, ../sass/helpers/_base.scss */
+/* line 202, ../sass/helpers/_base.scss */
 select[multiple] {
   height: 0;
 }
 
-/* line 207, ../sass/helpers/_base.scss */
+/* line 206, ../sass/helpers/_base.scss */
 .anchor-to-button {
   padding: 10px 50px 10px 50px;
   text-align: center;
@@ -12282,17 +12282,38 @@ select[multiple] {
   border-top-left-radius: 3px;
   color: white;
 }
-/* line 216, ../sass/helpers/_base.scss */
+/* line 215, ../sass/helpers/_base.scss */
 .anchor-to-button:hover {
   color: white;
 }
 
-/* line 221, ../sass/helpers/_base.scss */
+/* line 220, ../sass/helpers/_base.scss */
 .message {
   font-weight: 700;
   color: #EBEBEB;
   font-size: 50px;
   text-align: center;
+}
+
+/* line 228, ../sass/helpers/_base.scss */
+.error-safari input[type="text"],
+.error-safari input[type="password"],
+.error-safari input[type="date"],
+.error-safari input[type="datetime"],
+.error-safari input[type="datetime-local"],
+.error-safari input[type="month"],
+.error-safari input[type="week"],
+.error-safari input[type="email"],
+.error-safari input[type="number"],
+.error-safari input[type="search"],
+.error-safari input[type="tel"],
+.error-safari input[type="time"],
+.error-safari input[type="url"],
+.error-safari input[type="color"],
+.error-safari textarea {
+  border-color: #DF2828;
+  background-color: rgba(223, 40, 40, 0.4);
+  color: white;
 }
 
 /* line 1, ../sass/helpers/_forms.scss */
@@ -12413,10 +12434,13 @@ button {
 /* line 1, ../sass/pages/_login.scss */
 .login {
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 35%;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+  width: 400px;
+  height: 400px;
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
@@ -12426,7 +12450,7 @@ button {
   border-bottom-left-radius: 3px;
   border-top-left-radius: 3px;
 }
-/* line 12, ../sass/pages/_login.scss */
+/* line 18, ../sass/pages/_login.scss */
 .login .title {
   text-align: center;
   text-transform: uppercase;
@@ -12438,18 +12462,18 @@ button {
   border-top-left-radius: 3px;
   border-top-right-radius: 3px;
 }
-/* line 24, ../sass/pages/_login.scss */
+/* line 30, ../sass/pages/_login.scss */
 .login .content {
   padding: 15px 15px 15px 15px;
   border-bottom-left-radius: 3px;
   border-bottom-right-radius: 3px;
 }
-/* line 30, ../sass/pages/_login.scss */
+/* line 36, ../sass/pages/_login.scss */
 .login button {
   width: 100%;
   color: white;
 }
-/* line 35, ../sass/pages/_login.scss */
+/* line 41, ../sass/pages/_login.scss */
 .login .alert-box {
   margin-bottom: 10px;
   margin-top: 10px;
@@ -12462,7 +12486,7 @@ button {
   border-bottom-left-radius: 3px;
   border-top-left-radius: 3px;
 }
-/* line 44, ../sass/pages/_login.scss */
+/* line 50, ../sass/pages/_login.scss */
 .login .description {
   color: white;
   font-weight: 300;
@@ -12470,12 +12494,12 @@ button {
   margin-right: 6%;
   padding: 10px 10px 10px 10px;
 }
-/* line 52, ../sass/pages/_login.scss */
+/* line 58, ../sass/pages/_login.scss */
 .login input[type="text"],
 .login input[type="password"] {
   border: none;
 }
-/* line 58, ../sass/pages/_login.scss */
+/* line 63, ../sass/pages/_login.scss */
 .login .message {
   color: white;
   font-weight: 300;
@@ -12490,7 +12514,7 @@ button {
   border-top-left-radius: 3px;
   border-top: solid white 2px;
 }
-/* line 70, ../sass/pages/_login.scss */
+/* line 74, ../sass/pages/_login.scss */
 .login a {
   margin-left: 5%;
 }
